# assigment_cpp

./: CMakeLists.txt  main.cpp
